kubernetes/stage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diffaction-files-service-deployment
  labels:
    app: diffaction-files-service
    name: diffaction-files-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diffaction-files-service
  template:
    metadata:
      labels:
        app: diffaction-files-service
    spec:
      containers:
        - name: diffaction-files-service
          image: artemowkin/diffaction-files-service:latest
          ports:
            - containerPort: 8000
              name: web
          command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "debug"]
